--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .card{
     border: 1px solid rgba(0, 0, 0, 0.363);
 }
+.login{
+    width: 30%;
+    border: 1px solid;
+    padding: 30px;
+    left: 35%;
+    border-radius: 20px;
+}
