--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,43 @@
-.card{
-    border: 1px solid rgba(0, 0, 0, 0.363);
+.card {
+  border: 1px solid rgba(0, 0, 0, 0.363);
 }
-.login{
-    width: 30%;
-    border: 1px solid;
-    padding: 30px;
-    left: 35%;
-    border-radius: 20px;
+.login {
+  width: 30%;
+  border: 1px solid;
+  padding: 30px;
+  left: 35%;
+  border-radius: 20px;
+}
+@media (max-width: 576px) {
+  .mobile input {
+    width: 140px;
+  }
+  .mobile button {
+    width: 40px;
+  }
+  .navbar-brand {
+    width: 80px;
+  }
+  .logout {
+    flex-direction: column;
+    align-items: flex-start !important; /* force left */
+    justify-content: flex-start !important;
+    width: 18%;
+    gap: 8px;
+  }
+
+  .logout i {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+
+  .logout button {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    width: auto;
+  }
+  
+}
+.navbar-nav{
+  float: left;
 }
